--- a/WolvenKit/Views/Dialogs/AddChunkDialog.xaml
+++ b/WolvenKit/Views/Dialogs/AddChunkDialog.xaml
@@ -1,16 +1,25 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.Dialogs.AddChunkDialog"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com">
-
+                   xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol">
+    <catel:UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <hc:ThemeResources/>
+                <hc:Theme/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </catel:UserControl.Resources>
+    
+    
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        
-        <Label Grid.Row="0" Content="{Binding Title}" />
-        <Label Grid.Row="1" Content="Here goes your real content" />
+        <Grid Margin="0,50,0,0"  >
+            <Button HorizontalAlignment="Right" Width="150" Content="Confirm"/>
+            <Button HorizontalAlignment="Left" Width="150" Content="Cancel"/>
+
+
+        </Grid>
+        <hc:ComboBox  VerticalAlignment="Top" IsEditable="True" Width="380" hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Type" Margin="0,0,0,0" Text="None"/>
     </Grid>
     
 </catel:UserControl>
