--- a/WolvenKit/Views/Dialogs/StringsGUIImporterIDDialog.xaml
+++ b/WolvenKit/Views/Dialogs/StringsGUIImporterIDDialog.xaml
@@ -1,16 +1,28 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.Dialogs.StringsGUIImporterIDDialog"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com">
+                   xmlns:catel="http://schemas.catelproject.com"
+                   xmlns:hc="https://handyorg.github.io/handycontrol">
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        
-        <Label Grid.Row="0" Content="{Binding Title}" />
-        <Label Grid.Row="1" Content="Here goes your real content" />
+    <catel:UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <hc:ThemeResources/>
+                <hc:Theme/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </catel:UserControl.Resources>
+
+    <Grid Width="800" Height="450">
+        <DataGrid>
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="ID" Width="400"/>
+                <DataGridTextColumn Header="Text"/>
+                
+            </DataGrid.Columns>
+
+            <hc:Row ></hc:Row>
+        </DataGrid>
     </Grid>
     
 </catel:UserControl>
