--- a/WolvenKit/Views/Dialogs/StringsGuiScriptsPrefixDialog.xaml
+++ b/WolvenKit/Views/Dialogs/StringsGuiScriptsPrefixDialog.xaml
@@ -1,16 +1,31 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.Dialogs.StringsGuiScriptsPrefixDialog"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com">
+                   xmlns:catel="http://schemas.catelproject.com" 
+                   xmlns:hc="https://handyorg.github.io/handycontrol">
+
+    <catel:UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <hc:ThemeResources/>
+                <hc:Theme/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </catel:UserControl.Resources>
+
 
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        
-        <Label Grid.Row="0" Content="{Binding Title}" />
-        <Label Grid.Row="1" Content="Here goes your real content" />
+        <StackPanel>
+            <TextBlock Text="Enter string key prefix.."/>
+            <hc:TextBox VerticalAlignment="Top" Width="320"></hc:TextBox>
+            <Grid Margin="0,20,0,0"  >
+                <Button HorizontalAlignment="Right" Width="150" Content="Confirm"/>
+                <Button HorizontalAlignment="Left" Width="150" Content="Cancel"/>
+
+
+            </Grid>
+        </StackPanel>
+       
     </Grid>
-    
+
 </catel:UserControl>
