--- a/WolvenKit/Views/Editors/JournalEditor/JournalEditorView.xaml
+++ b/WolvenKit/Views/Editors/JournalEditor/JournalEditorView.xaml
@@ -1,16 +1,27 @@
-﻿<catel:DataWindow x:Class="WolvenKit.Views.JournalEditor.JournalEditorView"
+﻿<catel:UserControl x:Class="WolvenKit.Views.JournalEditor.JournalEditorView"
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                  xmlns:catel="http://schemas.catelproject.com" IsVisibleChanged="DataWindow_IsVisibleChanged">
-
+                  xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol" IsVisibleChanged="DataWindow_IsVisibleChanged">
+    <catel:UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <hc:ThemeResources/>
+                <hc:Theme/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </catel:UserControl.Resources>
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        
-        <TextBlock Grid.Row="0" Text="{Binding Title}" />
-        <TextBlock Grid.Row="1" Text="Here goes your real content" />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
+
+        <hc:ScrollViewer Height="500" Width="320">
+            <hc:CheckTreeView></hc:CheckTreeView>
+        </hc:ScrollViewer>
+        <Grid Grid.Column="1" Width="450">
+            
+        </Grid>
     </Grid>
     
-</catel:DataWindow>
+</catel:UserControl>
