--- a/WolvenKit/Views/Tools/AnimationTool/AnimsView.xaml
+++ b/WolvenKit/Views/Tools/AnimationTool/AnimsView.xaml
@@ -1,16 +1,40 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.AnimationTool.AnimsView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com" IsVisibleChanged="UserControl_IsVisibleChanged">
+                   xmlns:catel="http://schemas.catelproject.com" IsVisibleChanged="UserControl_IsVisibleChanged" xmlns:hc="https://handyorg.github.io/handycontrol">
+    <catel:UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <hc:ThemeResources/>
+                <hc:Theme/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </catel:UserControl.Resources>
+
 
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
         
-        <Label Grid.Row="0" Content="{Binding Title}" />
-        <Label Grid.Row="1" Content="Here goes your real content" />
+        <StackPanel VerticalAlignment="Center">
+            <StackPanel Margin="0,15,0,0"  Orientation="Horizontal">
+                <hc:ComboBox  VerticalAlignment="Top" IsEditable="True" Width="450" hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="w2rig"  Text="None"/>
+                <Button Width="50" Margin="5,0,0,0" Content="Browse"/>
+
+            </StackPanel>
+            <StackPanel Margin="0,15,0,0" Orientation="Horizontal">
+                <hc:ComboBox  VerticalAlignment="Top" IsEditable="True" Width="450" hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="w2anims"  Text="None"/>
+                <Button Width="50" Margin="5,0,0,0" Content="Browse"/>
+
+            </StackPanel>
+            <hc:ComboBox  IsEditable="True" Width="auto" hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Select Animation" Margin="0,15,0,15" Text=""/>
+            <Grid VerticalAlignment="Bottom" Margin="0,0,0,0"  >
+                <Button HorizontalAlignment="Right" Width="150" Content="Export"/>
+                <Button HorizontalAlignment="Left" Width="150" Content="Cancel"/>
+
+
+            </Grid>
+        </StackPanel>
+      
+
     </Grid>
-    
+
 </catel:UserControl>
