--- a/WolvenKit/Views/HomePage/Pages/WelcomePageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/WelcomePageView.xaml
@@ -125,9 +125,12 @@
         </Grid.ColumnDefinitions>
 
 
+            
 
         <Grid Grid.Column="0" Grid.Row="0" >
-            <StackPanel>
+            <hc:TransitioningContentControl TransitionMode="Right2LeftWithFade">
+
+                <StackPanel>
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,5,0,0">
                     <Grid>
                         <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="Hubot" Spin="False" SpinAutoReverse="False" Height="50" Width="50" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,0,0,0" HorizontalAlignment="Center"  VerticalAlignment="Center" />
@@ -150,7 +153,12 @@
                     <Run Text="The WolvenKit Team."/>
 
                 </TextBlock>
+
             </StackPanel>
+
+            </hc:TransitioningContentControl>
+
+
         </Grid>
         
         
@@ -158,7 +166,9 @@
         
         
         <Grid Grid.Column="1" Grid.Row="0" >
-            <StackPanel Margin="0,15,10,0" HorizontalAlignment="Right">
+            <hc:TransitioningContentControl TransitionMode="Right2LeftWithFade">
+
+                <StackPanel Margin="0,15,10,0" HorizontalAlignment="Right">
                 <StackPanel Margin="0,0,15,0" FlowDirection="RightToLeft" Orientation="Horizontal">
                     <iconPacks:PackIconBoxIcons   Grid.Row="0"   Kind="RegularBoltCircle" Spin="False" SpinAutoReverse="False" Height="25" Width="25" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"  />
 
@@ -167,23 +177,54 @@
                 </StackPanel>
                 <hc:Divider Margin="15,5,15,5"/>
                         <hc:ButtonGroup Margin="5,5,5,5" Style="{DynamicResource ButtonGroupSolid}" Orientation="Vertical">
-                        <Button Width="250" Height="50" BorderBrush="Transparent" Style="{DynamicResource ButtonGroupItemVerticalFirst}" HorizontalAlignment="Stretch" Content="Create Project"/>
-                    <Button Width="250" Height="50" BorderBrush="Transparent" Style="{DynamicResource ButtonGroupItemDefault}" HorizontalAlignment="Stretch" Content="Open Project"/>
-                    <Button Width="250" Height="50" BorderBrush="Transparent" Style="{DynamicResource ButtonGroupItemDefault}" HorizontalAlignment="Stretch" Content="WolvenKit Wiki"/>
-                    <Button Width="250" Height="50" BorderBrush="Transparent" Style="{DynamicResource ButtonGroupItemDefault}" HorizontalAlignment="Stretch" Content="Tutorials"/>
+                    <Button x:Name="CreateProjectButton" Margin="0.3" Width="200" Height="55" BorderBrush="Transparent" Style="{DynamicResource ButtonGroupItemVerticalFirst}" HorizontalAlignment="Stretch"  Command="{catel:CommandManagerBinding Application.NewProject}" >
+                        
+                        <Grid Width="125" >
+                            <iconPacks:PackIconCodicons Kind="Add" HorizontalAlignment="Right"/>
+                            <TextBlock Margin="5,0,35,0" Text="Create Project" HorizontalAlignment="Right"/>
+                        </Grid>                      
+                    </Button>
 
-                    <Button Width="250" Height="50" BorderBrush="Transparent" Style="{DynamicResource ButtonGroupItemVerticalLast}" HorizontalAlignment="Stretch" Content="Settings"/>
+                    <Button x:Name="OpenProjectButton" Margin="0.3" Width="200" Height="55" BorderBrush="Transparent" Style="{DynamicResource ButtonGroupItemDefault}" HorizontalAlignment="Stretch"  Command="{catel:CommandManagerBinding Application.OpenProject}"  >
+                        <Grid Width="125" >
+                            <iconPacks:PackIconCodicons Kind="GoToFile" HorizontalAlignment="Right"/>
+                            <TextBlock Margin="5,0,35,0" Text="Open Project" HorizontalAlignment="Right"/>
+                        </Grid>
+                    </Button>
+                    <Button x:Name="SettingsButton" Margin="0.3" Width="200" Height="55" BorderBrush="Transparent" Style="{DynamicResource ButtonGroupItemDefault}" HorizontalAlignment="Stretch" Click="SettingsButton_Click" >
+                        <Grid Width="125" >
+                            <iconPacks:PackIconCodicons Kind="Settings" HorizontalAlignment="Right"/>
+                            <TextBlock Margin="5,0,35,0" Text="Settings" HorizontalAlignment="Right"/>
+                        </Grid>
+                    </Button>
 
-                        </hc:ButtonGroup>
+                    <Button x:Name="TutorialsButton" Margin="0.3" Width="200" Height="55" BorderBrush="Transparent" Style="{DynamicResource ButtonGroupItemDefault}" HorizontalAlignment="Stretch" Click="TutorialsButton_Click" >
+                        <Grid Width="125" >
+                            <iconPacks:PackIconCodicons Kind="Question" HorizontalAlignment="Right"/>
+                            <TextBlock Margin="5,0,35,0" Text="Tutorials" HorizontalAlignment="Right"/>
+                        </Grid>
+                    </Button>
+                    <Button x:Name="WikiButton" Margin="0.3" Width="200" Height="55" BorderBrush="Transparent" Style="{DynamicResource ButtonGroupItemVerticalLast}" HorizontalAlignment="Stretch" Click="WikiButton_Click" >
+                        <Grid Width="125" >
+                            <iconPacks:PackIconCodicons Kind="Info" HorizontalAlignment="Right"/>
+                            <TextBlock Margin="5,0,35,0" Text="Wiki" HorizontalAlignment="Right"/>
+                        </Grid>
+                    </Button>
+
+
+                </hc:ButtonGroup>
             </StackPanel>
-            
+            </hc:TransitioningContentControl>
+
         </Grid>
 
         <Grid Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" >
+            <hc:TransitioningContentControl TransitionMode="Right2LeftWithFade">
 
-            <Grid hc:ThemeManager.AccentColor="{DynamicResource MahApps.Brushes.Accent3}"  Background="{DynamicResource MahApps.Brushes.ThemeBackground}"  >
+                <Grid hc:ThemeManager.AccentColor="{DynamicResource MahApps.Brushes.Accent3}"  Background="{DynamicResource MahApps.Brushes.ThemeBackground}"  >
                 <Grid Margin="3,0,3,0">
-                        <hc:TransitioningContentControl Height="250" Margin="0,35,0,0">
+                    <TextBlock Text="Recent Projects"/>
+                    <hc:TransitioningContentControl Height="250" Margin="0,35,0,0">
                             <hc:CoverView  ShowContent="False" BorderBrush="{x:Null}"  Grid.RowSpan="1" ItemContentHeight="55" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" Margin="15" BorderThickness="1,1,1,1" ItemMargin="15,8,15,8" ItemHeight="200"  ItemWidth="350">
 
                                 <hc:CoverView.ItemHeaderTemplate>
@@ -273,14 +314,19 @@
                         </hc:TransitioningContentControl>
                 </Grid>
             </Grid>
+            </hc:TransitioningContentControl>
+
         </Grid>
 
 
 
 
         <Grid Grid.Column="1" Grid.Row="1" >
+            <hc:TransitioningContentControl TransitionMode="Right2LeftWithFade">
 
-            <hc:FlipClock  Margin="0,0,5,0" VerticalAlignment="Bottom" HorizontalAlignment="Right" RenderTransformOrigin="0,0.5">
+
+
+                <hc:FlipClock  Margin="0,0,5,0" VerticalAlignment="Bottom" HorizontalAlignment="Right" RenderTransformOrigin="0,0.5">
                 <hc:FlipClock.Effect>
                     <hc:GrayScaleEffect></hc:GrayScaleEffect>
                 </hc:FlipClock.Effect>
@@ -293,14 +339,16 @@
                     </TransformGroup>
                 </hc:FlipClock.LayoutTransform>
 
-            </hc:FlipClock></Grid>
+                </hc:FlipClock>
+            </hc:TransitioningContentControl>
+        </Grid>
 
 
 
 
 
 
-        
+
 
     </Grid>
 </catel:UserControl>
